# calibration-pipeline

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile.backend  README.md  REFERENCE.md  calibration_only.R  complete_va_calibration.R  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  worker.py
backend/: main.py  worker.py
data/: NeonatesVA5.csv  test_calib_data.rds
data/ensemble/: single_eava_child_comsa.rds  single_eava_neonate_comsa.rds  single_insilicova_child_comsa.rds  single_insilicova_neonate_comsa.rds  single_interva_child_comsa.rds  single_interva_neonate_comsa.rds
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: CalibrationForm.tsx  LogViewer.tsx  TaskHistory.tsx  TaskStatus.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  spinner.tsx  terminal.tsx
scripts/: calibration_only.R  complete_va_calibration.R  ensemble_calibration.R  prepare_and_save_calibration_data.R
