[project]
name = "calibration-pipeline"
version = "0.1.0"
description = "VA Calibration API - FastAPI backend with Celery workers for R-based verbal autopsy calibration"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn==0.32.1",
    "celery==5.4.0",
    "redis==5.2.0",
    "pydantic==2.10.3",
]
